Update projects title.

--- a/public/404.html
+++ b/public/404.html
@@ -36,7 +36,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -52,7 +52,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
@@ -129,7 +129,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
@@ -145,7 +145,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
