--- a/public/about/index.html
+++ b/public/about/index.html
@@ -41,7 +41,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -57,7 +57,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
@@ -134,7 +134,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
@@ -150,7 +150,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
