--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -58,7 +58,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
@@ -135,7 +135,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
@@ -151,7 +151,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
