--- a/public/portfolio/leaps-and-bounds/index.html
+++ b/public/portfolio/leaps-and-bounds/index.html
@@ -45,7 +45,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -61,7 +61,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
@@ -138,7 +138,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
@@ -154,7 +154,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
