--- a/public/designs/piano/index.html
+++ b/public/designs/piano/index.html
@@ -37,7 +37,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -53,7 +53,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
@@ -130,7 +130,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile WELCOME" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
@@ -146,7 +146,7 @@
 
         <p>
             <a href="/portfolio/">
-                Portfolio
+                Projects
             </a>
         </p>
 
