--- a/public/404.html
+++ b/public/404.html
@@ -36,7 +36,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile Photoshop" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -129,7 +129,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile Photoshop" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
