--- a/public/portfolio/sample-project/index.html
+++ b/public/portfolio/sample-project/index.html
@@ -45,7 +45,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile Photoshop" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -138,7 +138,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile D3" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile Photoshop" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
@@ -234,7 +234,7 @@
 
 
 <span >
-  <a href="http://localhost:1313/portfolio/">PORTFOLIO</a>
+  <a href="http://localhost:1313/portfolio/">PROJECTS</a>
    / 
 </span>
 
