Update posts as drafts.

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -41,7 +41,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile Photoshop" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile Collaboration" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -63,7 +63,7 @@
 
         <p>
             <a href="/post/">
-                Post
+                Announcements
             </a>
         </p>
 
@@ -134,7 +134,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile Photoshop" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile Collaboration" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
@@ -156,7 +156,7 @@
 
         <p>
             <a href="/post/">
-                Post
+                Announcements
             </a>
         </p>
 
