--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -40,7 +40,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile PROJECTS" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile Viola" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -62,7 +62,7 @@
 
         <p>
             <a href="/post/">
-                Post
+                Announcements
             </a>
         </p>
 
@@ -133,7 +133,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile PROJECTS" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile Viola" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
@@ -155,7 +155,7 @@
 
         <p>
             <a href="/post/">
-                Post
+                Announcements
             </a>
         </p>
 
