--- a/public/portfolio/leaps-and-bounds/index.html
+++ b/public/portfolio/leaps-and-bounds/index.html
@@ -45,7 +45,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile Photoshop" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile Viola" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -67,7 +67,7 @@
 
         <p>
             <a href="/post/">
-                Post
+                Announcements
             </a>
         </p>
 
@@ -138,7 +138,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile Photoshop" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile Viola" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
@@ -160,7 +160,7 @@
 
         <p>
             <a href="/post/">
-                Post
+                Announcements
             </a>
         </p>
 
