Update theme colors.

--- a/public/designs/viola/index.html
+++ b/public/designs/viola/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
-  <title> - My New Hugo Site</title>
+  <title> - Julie Nishimura, Collaborative Pianist</title>
   <link rel='canonical' href='http://localhost:1313/designs/viola/' />
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1' />
@@ -20,7 +20,7 @@
 <link rel="stylesheet" href="http://localhost:1313/syntax.min.css" integrity="" media="screen">
 
   <meta property="og:url" content="http://localhost:1313/designs/viola/">
-  <meta property="og:site_name" content="My New Hugo Site">
+  <meta property="og:site_name" content="Julie Nishimura, Collaborative Pianist">
   <meta property="og:title" content="Viola">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
@@ -37,7 +37,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile Viola" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile Collaboration" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -117,7 +117,7 @@
 </header>
 
 <div class="mobile-header">
-  <p> My New Hugo Site </p>
+  <p> Julie Nishimura, Collaborative Pianist </p>
   <div class="hamburger">
     <div class="bar"></div>
     <div class="bar"></div>
@@ -130,7 +130,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile Viola" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile Collaboration" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
