--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
-  <title>PROJECTS - My New Hugo Site</title>
+  <title>PROJECTS - Julie Nishimura, Collaborative Pianist</title>
   <link rel='canonical' href='http://localhost:1313/portfolio/' />
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1' />
@@ -16,11 +16,11 @@
 
 
 
-<link rel="stylesheet" href="http://localhost:1313/sass/style.min.eabe1aa4bd266a15f7b39b122bd6a5cc75cb067e5373631ac21d7815d6240d6f.css" integrity="sha256-6r4apL0mahX3s5sSK9alzHXLBn5Tc2Mawh14FdYkDW8=" media="screen">
+<link rel="stylesheet" href="http://localhost:1313/sass/style.min.644cf10ceab5bb91e4bbbfaf04b49f6c3c24160350fe3860ca58913ed09a7d4e.css" integrity="sha256-ZEzxDOq1u5Hku7&#43;vBLSfbDwkFgNQ/jhgyliRPtCafU4=" media="screen">
 <link rel="stylesheet" href="http://localhost:1313/syntax.min.css" integrity="" media="screen">
 
   <meta property="og:url" content="http://localhost:1313/portfolio/">
-  <meta property="og:site_name" content="My New Hugo Site">
+  <meta property="og:site_name" content="Julie Nishimura, Collaborative Pianist">
   <meta property="og:title" content="PROJECTS">
   <meta property="og:description" content="Portfolio Section">
   <meta property="og:locale" content="en_us">
@@ -40,7 +40,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='http://localhost:1313/images/headshot.png' alt="Profile Viola" class="rounded-logo">
+        <img src='http://localhost:1313/images/headshot.png' alt="Profile PROJECTS" class="rounded-logo">
       </a>
     </div>
     <h2>Julie Nishimura</h2>
@@ -120,7 +120,7 @@
 </header>
 
 <div class="mobile-header">
-  <p> My New Hugo Site </p>
+  <p> Julie Nishimura, Collaborative Pianist </p>
   <div class="hamburger">
     <div class="bar"></div>
     <div class="bar"></div>
@@ -133,7 +133,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='http://localhost:1313/images/headshot.png' alt="Profile Viola" class="rounded-logo">
+          <img src='http://localhost:1313/images/headshot.png' alt="Profile PROJECTS" class="rounded-logo">
         </a>
       </div>
       <h2>Julie Nishimura</h2>
